Fixer horizontal scrolling bug and table zebra style

--- a/styles/Container.module.css
+++ b/styles/Container.module.css
@@ -10,9 +10,9 @@
 }
 
 .cards {
-  width: 100%;
+  /* width: 100%; */
   display: flex;
-  padding: 1rem;
+  /* padding: 1rem; */
   --tw-space-x-reverse: 0;
   margin-right: calc(0.75rem * var(--tw-space-x-reverse));
   margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
@@ -22,7 +22,7 @@
 .main {
   display: flex;
   margin-left: 0.75rem;
-  /* margin-top: 1.5rem; */
+  margin-top: 1.5rem;
   margin-right: 1rem;
   --tw-space-x-reverse: 0;
   margin-right: calc(1.5rem * var(--tw-space-x-reverse));
