--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,8 @@ a {
 * {
   box-sizing: border-box;
 }
+
+tbody tr:nth-child(odd) {
+  background-color: #ffffff;
+  /* color: #fff; */
+}
